# customs-regulations-chatbot

./: .dockerignore  .env.dev.example  .env.example  .gitignore  CLAUDE.md  README.md
.claude/: settings.json
backend/: .env.example  Dockerfile  Dockerfile-aws  README.md  docker-compose.dev.yml  docker-compose.prod.yml  (+6 more)
core/: .dockerignore  Dockerfile  Dockerfile-aws  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
core/api/: Dockerfile  Dockerfile-aws  pyproject.toml
core/api/src/fs_explorer_api/: __init__.py  agent.py  benchmark_runner.py  exploration_trace.py  main.py  models.py  runs.py  server.py  ui.html  workflow.py
core/api/src/fs_explorer_api/amendments/: __init__.py  candidate_finder.py  drafter.py  matcher.py  models.py  pipeline.py  ranker.py  segmenter.py
core/api/src/fs_explorer_api/llm/: base.py  factory.py  gemini.py  openrouter.py
core/api/src/fs_explorer_api/search/: filters.py  query.py  ranker.py  semantic.py
core/indexer/: .env.example  Dockerfile  Dockerfile-aws  docker-compose.yml  pyproject.toml
core/indexer/src/fs_explorer_indexer/: __init__.py  chunk_inspector.html  chunk_inspector.py  document_parser.py  indexer_server.py  main.py
core/indexer/src/fs_explorer_indexer/indexing/: chunker.py  metadata.py  pipeline.py  regulatory_chunker.py  schema.py
core/scripts/: benchmark_agent_tokens.py  generate_large_docs.py  generate_test_docs.py
core/shared/: pyproject.toml
core/shared/src/fs_explorer_shared/: __init__.py  auth.py  embeddings.py  fs.py  google_genai.py  index_config.py
core/shared/src/fs_explorer_shared/storage/: __init__.py  base.py  chunk_view.py  postgres.py
core/src/fs_explorer/: __init__.py  agent.py  chunk_inspector.py  embeddings.py  exploration_trace.py  fs.py  index_config.py  main.py  models.py  server.py  workflow.py
core/src/fs_explorer/indexing/: __init__.py  metadata.py  pipeline.py  regulatory_chunker.py
core/src/fs_explorer/llm/: __init__.py  base.py  factory.py  gemini.py
core/src/fs_explorer/search/: query.py
core/src/fs_explorer/storage/: base.py  postgres.py
core/tests/: conftest.py  test_agent.py  test_cli_indexing.py  test_exploration_trace.py  test_fs.py  test_indexing.py  test_regulatory_chunker.py  test_search.py  test_server_search.py
core/tests/api/: conftest.py  test_agent.py  test_benchmark_runner.py  test_cli_query.py  test_e2e.py  test_exploration_trace.py  test_llm_gemini.py  test_llm_openrouter.py  test_models.py  test_runs.py  test_server.py  test_server_index_reads.py  test_token_optimization.py  test_workflow.py
core/tests/indexer/: test_cli_indexing.py  test_document_parser.py  test_indexer_server.py  test_indexing.py  test_lazy_imports.py  test_regulatory_chunker.py
core/tests/integration/: test_search.py  test_server_search.py
core/tests/shared/: test_embeddings.py  test_fs.py  test_google_genai.py
(+191 files in other folders)
