[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[project]
name = "fs-explorer-workspace"
version = "0.1.0"
description = "Workspace root coordinating fs-explorer-shared, fs-explorer-api and fs-explorer-indexer."
requires-python = ">=3.10"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = ["shared", "api", "indexer"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.9",
    "ty>=0.0.1a33",
    "reportlab>=4.4.7",
]
