[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[project]
name = "fs-explorer-api"
version = "0.1.0"
description = "FsExplorer chat/agent API: workflow orchestration, indexed search, the WebSocket explore endpoint. No Docling/langextract."
requires-python = ">=3.10"
dependencies = [
    "fs-explorer-shared",
    "fastapi>=0.115.0",
    "google-genai>=1.55.0",
    "httpx>=0.28.0",
    "llama-index-workflows>=2.11.5",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.5,<0.20.0",
    "uvicorn>=0.34.0",
    "websockets>=14.0",
]

[tool.uv.sources]
fs-explorer-shared = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
explore = "fs_explorer_api.main:app"
explore-ui = "fs_explorer_api.server:run_server"
