[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[project]
name = "fs-explorer-indexer"
version = "0.1.0"
description = "FsExplorer indexing service: Docling document parsing, regulatory chunking, langextract metadata extraction, the index build/embed/status API."
requires-python = ">=3.10"
dependencies = [
    "fs-explorer-shared",
    "docling>=2.55.0",
    "fastapi>=0.115.0",
    "google-genai>=1.55.0",
    "langextract>=1.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.5,<0.20.0",
    "uvicorn>=0.34.0",
]

[tool.uv.sources]
fs-explorer-shared = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
explore-index = "fs_explorer_indexer.main:app"
explore-index-ui = "fs_explorer_indexer.indexer_server:run_server"
